[project]
name = "discord-python-bot"
version = "0.1.0"
description = "Discord economy and Markov bot"
requires-python = ">=3.12"
dependencies = [
  "discord.py>=2.6.4",
  "aiofiles>=24.1.0",
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
